# AerialFireHose

./: README.md
devel/include/air3d_planner/: BoolStamped.h  MissionControlConfig.h  ParamsStamped.h
devel/include/qrotor_gazebo_plugin/: Command.h  Spline.h
devel/lib/pkgconfig/: air3d_gazebo.pc  air3d_viz.pc  qrotor_gazebo_plugin.pc  qrotor_offboard.pc
devel/share/air3d_gazebo/cmake/: air3d_gazeboConfig.cmake
devel/share/air3d_planner/cmake/: air3d_planner-msg-paths.cmake
devel/share/air3d_planner/docs/: MissionControlConfig-usage.dox  MissionControlConfig.dox  MissionControlConfig.wikidoc
devel/share/air3d_viz/cmake/: air3d_vizConfig.cmake
devel/share/qrotor_gazebo_plugin/cmake/: qrotor_gazebo_plugin-msg-extras.cmake  (+2 more)
src/air3d/air3d_gazebo/: CMakeLists.txt  package.xml
src/air3d/air3d_planner/: CMakeLists.txt  setup.py
src/air3d/air3d_planner/cfg/: MissionControl.cfg
src/air3d/air3d_planner/launch/: air3d_planning_node.launch
src/air3d/air3d_planner/msg/: ParamsStamped.msg
src/air3d/air3d_planner/scripts/: air3d_planning_node.py  test_a3d_takeoff.py
src/air3d/air3d_planner/src/: DroneAltitudeController.py  __init__.py  agent_manager.py  catenary_utils.py  controller.py
src/air3d/air3d_planner/src/air3d_planner/: __init__.py  agent_manager.py  agent_manager_cbf.py  catenary_utils.py  controller.py  controller_cbf.py  controllers.py
src/air3d/air3d_viz/: CMakeLists.txt  package.xml  setup.py
src/air3d/air3d_viz/scripts/: air3d_play_pickle_node.py  air3d_viz_node.py
src/air3d/air3d_viz/src/air3d_viz/: visualizer.py
(+46 files in other folders)
